# varcoin

./: .travis.yml  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Makefile  README  README.md  ReleaseNotes.txt  cmake_install.cmake
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  VarNote.hpp  VarNoteConfig.h  VarNoteConfig.hpp  VarNote_config.h  cmake_install.cmake  main_tests.cpp  main_varcoind.cpp  main_walletd.cpp  rpc_api.hpp  varcoin.rc  version.h.in  version.hpp
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base64.hpp  BlockingQueue.cpp  BlockingQueue.h  CommandLine.cpp  CommandLine.h  CommandLine.hpp  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  ConsoleTools.hpp  FileMappedVector.cpp  FileMappedVector.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  Ipv4Address.cpp  Ipv4Address.hpp  JsonValue.cpp  JsonValue.h  JsonValue.hpp  Math.cpp  Math.h  Math.hpp  MemoryInputStream.cpp  MemoryInputStream.h  MemoryStreams.cpp  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ScopeExit.hpp  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  (+26 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/Core/: BlockChain.cpp  BlockChain.hpp  BlockChainFileFormat.cpp  BlockChainFileFormat.hpp  BlockChainState.cpp  BlockChainState.hpp  Config.cpp  Config.hpp  Currency.cpp  Currency.hpp  Difficulty.cpp  Difficulty.hpp  DifficultyCheck.cpp  DifficultyCheck.hpp  Node.cpp  Node.hpp  NodeDownloader.cpp  NodeLegacyAPI.cpp  TransactionBuilder.cpp  TransactionBuilder.hpp  TransactionExtra.cpp  TransactionExtra.hpp  VarNoteTools.cpp  VarNoteTools.hpp  Wallet.cpp  Wallet.hpp  WalletNode.cpp  WalletNode.hpp  WalletSerializationV1.cpp  WalletSerializationV1.h  WalletState.cpp  WalletState.hpp  WalletSync.cpp  WalletSync.hpp  rpc_api_serialization.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  CommonLogger.hpp  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  ILogger.hpp  (+10 more)
(+891 files in other folders)
