add_definitions(-DSTATICLIB)

file(GLOB_RECURSE COMMON common/*)
file(GLOB_RECURSE CRYPTO crypto/*)
file(GLOB_RECURSE VarNote_CORE VarNote_core/*)
file(GLOB_RECURSE VarNote_PROTOCOL VarNote_protocol/*)
file(GLOB_RECURSE DAEMON daemon/*)
file(GLOB_RECURSE P2P p2p/*)
file(GLOB_RECURSE RPC rpc/*)
file(GLOB_RECURSE SIMPLEWALLET simplewallet/*)
file(GLOB_RECURSE CONN_TOOL connectivity_tool/*)
file(GLOB_RECURSE WALLET wallet/*)
file(GLOB_RECURSE MINER miner/*)
file(GLOB_RECURSE NODE_RPC_PROXY node_rpc_proxy/*)

source_group(common FILES ${COMMON})
source_group(crypto FILES ${CRYPTO})
source_group(VarNote_core FILES ${VarNote_CORE})
source_group(VarNote_protocol FILES ${VarNote_PROTOCOL})
source_group(daemon FILES ${DAEMON})
source_group(p2p FILES ${P2P})
source_group(rpc FILES ${RPC})
source_group(simplewallet FILES ${SIMPLEWALLET})
source_group(connectivity-tool FILES ${CONN_TOOL})
source_group(wallet FILES ${WALLET})
source_group(simpleminer FILES ${MINER})
source_group(node_rpc_proxy FILES ${NODE_RPC_PROXY})

add_library(common ${COMMON})
add_library(crypto ${CRYPTO})
add_library(VarNote_core ${VarNote_CORE})
add_executable(daemon ${DAEMON} ${P2P} ${VarNote_PROTOCOL})
add_executable(connectivity_tool ${CONN_TOOL})
add_executable(simpleminer ${MINER})
target_link_libraries(daemon rpc VarNote_core crypto common upnpc-static ${Boost_LIBRARIES})
target_link_libraries(connectivity_tool VarNote_core crypto common ${Boost_LIBRARIES})
target_link_libraries(simpleminer VarNote_core crypto common ${Boost_LIBRARIES})
add_library(rpc ${RPC})
add_library(wallet ${WALLET})
add_executable(simplewallet ${SIMPLEWALLET} )
target_link_libraries(simplewallet wallet rpc VarNote_core crypto common upnpc-static ${Boost_LIBRARIES})
add_library(node_rpc_proxy ${NODE_RPC_PROXY})

add_dependencies(daemon version)
add_dependencies(rpc version)
add_dependencies(simplewallet version)

set_property(TARGET common crypto VarNote_core rpc wallet node_rpc_proxy PROPERTY FOLDER "libs")
set_property(TARGET daemon simplewallet connectivity_tool simpleminer PROPERTY FOLDER "prog")

set_property(TARGET daemon PROPERTY OUTPUT_NAME "varcoind")
set_property(TARGET connectivity_tool PROPERTY OUTPUT_NAME "connectivity_toold")
set_property(TARGET simplewallet PROPERTY OUTPUT_NAME "simplewalletd")
set_property(TARGET wallet PROPERTY OUTPUT_NAME "walletd")
set_property(TARGET simpleminer PROPERTY OUTPUT_NAME "minerd")
#set_property(TARGET node_rpc_proxy PROPERTY OUTPUT_NAME "node_rpc_proxyd")
